- load images eagerly - fix page min height - fix word wrap

--- a/src/co/page/index.module.css
+++ b/src/co/page/index.module.css
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     padding: var(--padding-large) 0;
-    min-height: 100%;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
